src/commands/top/ui/snapshots/zizq__commands__top__ui__tests__render_paused_at_buffer_edge_shows_resume_hint.snap
---
source: src/commands/top/ui/mod.rs
expression: "render_to_string(&app, 90, 12)"
---
  Zizq 0.1.0
● Connected 127.0.0.1:8901   PAUSED
  Server version: ?, Uptime: ?
  Queue: 0 in-flight, 2 ready, 0 scheduled
         ▼
  Depth[││                                                                       2 jobs]
         ▲
   In-Flight   Ready   Scheduled
                         ID   PRIORITY QUEUE                 DELAY   ATTEMPTS TYPE
                         j1          0 queue1                    -          0 type1
                         j2          0 queue1                    -          0 type1
 TabChange Tab iInfo pResume /Find DDelete qQuit   ↓ Resume to scroll further
