src/commands/top/ui/snapshots/zizq__commands__top__ui__tests__render_search_prompt_active_queue_field.snap
---
source: src/commands/top/ui/mod.rs
expression: "render_to_string(&app, 80, 10)"
---
  Zizq 0.1.0
● Connected 127.0.0.1:8901
  Server version: ?, Uptime: ?
  Queue: 0 in-flight, 0 ready, 0 scheduled

  Depth[                                                               0 jobs]

   In-Flight   Ready   Scheduled
                         ID   PRIORITY QUEUE              DURATION   ATTEMPTS TY
 Search  Type: send_welcome          Queue: emails
